--- a/WIP/paper/paper.tex
+++ b/WIP/paper/paper.tex
@@ -8,35 +8,24 @@
 \begin{document}
 
 \maketitle
-We study how variable selection properties can be improved by leveraging external information 
-on the likelihood of variables to be truly associated to the outcome. As a particular case we consider 
-a flexible transfer learning framework where the set of variable selected in the source is transferred to 
-ease variable selection in the target. We introduce a family of penalized linear regression methods where 
-the penalties depend on the external information or transferred set of variables and are motivated by 
-connections to Bayesian variable selection. We develop a careful analysis of the fundamental limits on 
-consistent variable selection in linear regression and show that these can be pushed with external data 
-and transfer learning. We first precisely quantify the gains that are achievable for ideal penalties set by an oracle. 
-Subsequently, we propose computationally fast algorithms for the incorporation of external information and transfer 
-learning that are inspired by empirical Bayes techniques and do not require an oracle. We prove these algorithms 
-recover most of the gains achievable by oracle penalties and are robust to negative transfer. We show the proposed algorithm improves on standard methods
-on simulated and empirical data.
+Sparse high-dimensional signal recovery is only possible under certain conditions on the number of parameters, sample size, signal strength and underlying sparsity. We study how these mathematical limits can be pushed by leveraging external information on the likelihood of variables to be associated with the outcome. As a particular case, we consider a flexible transfer learning framework where the set of variables selected in the source is transferred to ease variable selection in the target. We introduce a family of penalized linear regression methods motivated by connections to Bayesian variable selection where the penalties depend on the external information or transferred set of variables. We show they attain variable selection consistency where otherwise it would not be possible, or attain it at a faster rate. We first precisely quantify the gains that are achievable for ideal penalties set by an oracle. Subsequently, we propose computationally fast algorithms for the incorporation of external information and transfer learning that do not require an oracle and are inspired by empirical Bayes techniques. We prove these algorithms recover most of the gains achievable by oracle penalties and are robust to negative transfer. We show that the proposed algorithm improves on standard variable selection methods on simulated and empirical data.
 
 \paul{}
 
 \section{Introduction}
 
 In a data-rich world, basing statistical inference on only a single source of information increasingly seems like a missed opportunity. As ever more data is being generated and stored, many have answered statistical questions by 
-leveraging multiple datasets. Integrating multiple sources of data implies handling and possibly exploiting some form of heterogeneity. There may be heterogeneity in samples where, for example, samples are not identically distributed but rather feature a group structure XXX cite some Annie Qu's work XXX. There may also be heterogeneity in variables in which case there is often knowledge, external to the dataset of interest, of varying likelihood of variables to be truly associated to the outcome of interest. This may occur when working with \textit{multimodal} data, i.e. featuring different types of variables \cite{}, where one block of variables may be expected to be less sparse than another, e.g. clinical vs genomic markers. Another example is when meta-data is available on the variables themselves, e.g functional annotations on genes. A setting of particular interest is transfer learning which %has attracted a lot of attention lately \cite{} and 
-can broadly be defined as the problem of improving learning for given \textit{target} task and dataset by reusing knowledge acquired from similar \textit{source} tasks and datasets. In that case, the set of variable selected in the source data and task may be seen as external knowledge on the likelihood of variables to be truly associated to the target outcome. Other problems, closely related to transfer learning, may involve similar knowledge:
+leveraging multiple datasets. Integrating multiple sources of data implies handling and possibly exploiting some form of heterogeneity. There may be heterogeneity in samples where, for example, samples are not identically distributed but rather feature a group structure XXX cite some Annie Qu's work XXX. There may also be heterogeneity in variables in which case there is often knowledge, external to the dataset of interest, of varying likelihood of variables to be truly associated with the outcome of interest. This may occur when working with \textit{multimodal} data, i.e. featuring different types of variables \cite{}, where one block of variables may be expected to be less sparse than another, e.g. clinical vs genomic markers. Another example is when meta-data is available on the variables themselves, e.g functional annotations on genes. A setting of particular interest is transfer learning which %has attracted a lot of attention lately \cite{} and 
+can broadly be defined as the problem of improving learning for given \textit{target} task and dataset by reusing knowledge acquired from similar \textit{source} tasks and datasets. In that case, the set of variable selected in the source data and task may be seen as external knowledge on the likelihood of variables to be truly associated with the target outcome. Other problems, closely related to transfer learning, may involve similar knowledge:
 \textit{domain adaptation} concerned with adapting a model when applying to data which distribution differ from that of the training data and \textit{meta-learning} where a model is trained using information obtained
-from other models with different architectures. For convenience, we refer to the different kinds of external knowledge on the likelihood of variables to be truly associated to the outcome as external information.   
+from other models with different architectures. For convenience, we refer to the different kinds of external knowledge on the likelihood of variables to be truly associated with the outcome as external information.   
 
 In high-dimensional settings, where the number of samples is smaller than the number of parameters, leveraging such 
 external information is a particularly attractive idea. The inherent scarcity of information of these settings implies that strong assumptions are required to carry out meaningful inference. In structural learning problems such as variable selection, those assumptions regard sparsity and signal strength and, although mathematically necessary, they can be too strong in practice 
 (see \citep{giannone2021economic} for a discussion in the context of social sciences). Numerous applied and methodological works have employed such external information to guide structural learning and consistently observed improvements when suitable external information is integrated. bousteleix..., codata,... As regards transfer learning, statistical literature has focused on the transfer from the source to the target of parameter estimates. Some proposed methods perform variable selection but do not consider the transfer of the set of selected variables as we consider here.  perform variable selection example telesca.
 
 
-Despite empirical success, a theoretical framework explaining precisely why and how leveraging external information on the likelihood of variables to be truly associated to the outcome as possible with data integration and transfer learning is not currently available. In this work, we investigate how, in linear regression, said information allows pushing the mathematical conditions under which consistently recovering the true subset of variables associated to the outcome is possible, and improving the corresponding rates. Consistency is understood here as recovering the true subset with probability going to 1 as the number of samples $n$ and possibly the dimension $p$ go to infinity. 
+Despite empirical success, a theoretical framework explaining precisely why and how leveraging external information on the likelihood of variables to be truly associated with the outcome as possible with data integration and transfer learning is not currently available. In this work, we investigate how, in linear regression, said information allows pushing the mathematical conditions under which consistently recovering the true subset of variables associated with the outcome is possible, and improving the corresponding rates. Consistency is understood here as recovering the true subset with probability going to 1 as the number of samples $n$ and possibly the dimension $p$ go to infinity. 
 
 To make ideas concrete, consider variable selection in the Gaussian linear regression
 \begin{equation}\label{eq:linearmodel}
@@ -70,6 +59,6 @@ The statistical properties of the transfer of parameter estimates in linear regr
 \subsection{Organization and contribution}
 The rest of the paper is organized as follows. In Section~{sec:intro_blockpen} we formally introduce externally-informed $\ell_0$ penalties and further detail their connection to Bayesian variable selection. We also describe the general assumptions used across results. Section~\ref{sec:properties_legression} studies the properties of external information-dependent, block-based, $\ell_0$ penalties and how they ease consistent model recovery. We show that an oracle, knowing the true pattern of sparsity and signal strength, may take advantage of the external information so that variable selection consistency is either attained where otherwise it would not be possible, or is attained at a faster rate. These oracle results give an understanding of the maximum gains achievable by leveraging external information. Results are tight, when applied to standard $\ell_0$ penalties with no access to external information, they match the minimax results of \cite{Bunea2007} under orthogonal design and match or improve the results on the fundamental limits on variable selection \cite{infotheowainwright, wang2010, bryon}. 
 
-In Section XXX, we propose a two-step data-based procedure grounded in empirical Bayes methods to set externally-informed $\ell_0$ penalties. We show the proposed procedure improves variable selection properties without requiring an oracle and compare its properties to those of oracle-set penalties. As a particular case, we discuss the properties of a transfer learning algorithm for the transfer of the set of selected variables from the source to the target. In particular, we show it is robust to so-called \textit{negative transfer}, when used transfer learning worsens the performance in the target. To the best of our knowledge, this is the first theoretical analysis of such transfer learning algorithm centered on the transfer of the binary information of selection vs. no selection in source, rather than parameter estimates. This is relevant firstly because the transfer of selection information might be preferred when the similarity between source and target data is thought to lie in the sets of variables associated to the respective outcomes, rather than in the distance between respective parameter vectors. Secondly, our work highlights the value of transferring the set of selected variables independently of parameter estimates. Our transfer learning algorithm is also highly flexible as it does not require full access to the source data, nor that the source task is a linear regression, nor that the set of variables is the same between the source and the target data.
+In Section XXX, we propose a two-step data-based procedure grounded in empirical Bayes methods to set externally-informed $\ell_0$ penalties. We show the proposed procedure improves variable selection properties without requiring an oracle and compare its properties to those of oracle-set penalties. As a particular case, we discuss the properties of a transfer learning algorithm for the transfer of the set of selected variables from the source to the target. In particular, we show it is robust to so-called \textit{negative transfer}, when used transfer learning worsens the performance in the target. To the best of our knowledge, this is the first theoretical analysis of such transfer learning algorithm centered on the transfer of the binary information of selection vs. no selection in source, rather than parameter estimates. This is relevant firstly because the transfer of selection information might be preferred when the similarity between source and target data is thought to lie in the sets of variables associated with the respective outcomes, rather than in the distance between respective parameter vectors. Secondly, our work highlights the value of transferring the set of selected variables independently of parameter estimates. Our transfer learning algorithm is also highly flexible as it does not require full access to the source data, nor that the source task is a linear regression, nor that the set of variables is the same between the source and the target data.
 
 \end{document}
